--- a/theory/1_웹_프로그래밍_기초/1_Web개발의_이해_FE_BE/1) 웹 프로그래밍을 위한 프로그램 언어들.md
+++ b/theory/1_웹_프로그래밍_기초/1_Web개발의_이해_FE_BE/1) 웹 프로그래밍을 위한 프로그램 언어들.md
@@ -62,7 +62,9 @@
 
 
 - **Github에서 가장 인기 있는 언어 15개**
-![image]()
+
+![image](https://github.com/namdh9011/web-boostcourse/blob/master/theory/1_%EC%9B%B9_%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D_%EA%B8%B0%EC%B4%88/1_Web%EA%B0%9C%EB%B0%9C%EC%9D%98_%EC%9D%B4%ED%95%B4_FE_BE/image/1_1_gitpopularlanguages.png)
 
 - **티오베의 순위**
-![image]()
+
+![image](https://github.com/namdh9011/web-boostcourse/blob/master/theory/1_%EC%9B%B9_%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D_%EA%B8%B0%EC%B4%88/1_Web%EA%B0%9C%EB%B0%9C%EC%9D%98_%EC%9D%B4%ED%95%B4_FE_BE/image/1_2_tiobepopularlanguages.png)
